--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ lassondeDB/settings.py
 .idea/*
 contacts/migrations/0001_initial.py
 projects/migrations/0001_initial.py
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/LassondeProjectsInventory.iml
+.idea/LassondeProjectsInventory.iml
