Moved secrets into env var, now tracking settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 *.log
 *.pot
 *.pyc
-lassondeDB/settings.py
 .idea/*
 contacts/migrations/0001_initial.py
 projects/migrations/0001_initial.py
 .idea/inspectionProfiles/profiles_settings.xml
 .idea/LassondeProjectsInventory.iml
 .idea/LassondeProjectsInventory.iml
+.env
