Added Youtube Upload Feature
Now when an capstone video is uploaded it directly uploads to youtube as well, and upon successful upload, removes the local copy of the file and replaces with a link to the youtube video instead in the db. Also changed add/edit project to match main.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.pot
 *.pyc
 .idea/*
+*migrations*
 contacts/migrations/0001_initial.py
 projects/migrations/0001_initial.py
 .idea/inspectionProfiles/profiles_settings.xml
@@ -9,3 +10,4 @@ projects/migrations/0001_initial.py
 .idea/LassondeProjectsInventory.iml
 .env
 env
+
